2011-05-16 Gabor Simon <gabor.simon@mailbox.hu>

	* AndroidManifest.xml: TextDialogPreference added, typo in the name of FilePickerPreference fixed, version increased

	* src/org/dyndns/fules/ck/CompassKeyboardView.java: 'layout=n' action for keys added, some code cleanup 

	* src/org/dyndns/fules/ck/CompassKeyboard.java: layout handling improved

	* src/org/dyndns/fules/ck/CompassKeyboardSettings.java: layout-related code added

	* src/org/dyndns/fules/ck/FilePickerPreference.java: some code cleanup
	
	* src/org/dyndns/fules/ck/FilePicker.java: some code cleanup, choiceMode support started (FIXME: still has issues!)

	* res/values/constants.xml: menu constants reorganised

	* res/values/attrs.xml: TextDialogPreference defined

	* res/xml/default_*.xml: layout names published, layout switching actions added

	* res/xml/ck_settings.xml: layout-related preference changes

	* build.xml: target 'install' now uses the emulator, 'relinstall' the real device

2011-05-07 Gabor Simon <gabor.simon@mailbox.hu>
Direction choosing method improved

	* src/org/dyndns/fules/ck/CompassKeyboardView.java: direction choosing is now based on relative movement

	* src/org/dyndns/fules/ck/CompassKeyboard.java: missing initialisation of visual feedback settings added

2011-05-06 Gabor Simon <gabor.simon@mailbox.hu>
Visual feedback added

	* src/org/dyndns/fules/ck/CompassKeyboardView.java: two kinds of visual feedback added

	* src/org/dyndns/fules/ck/CompassKeyboard.java: settings for visual feedback added, input type handling improved
	* res/values/constants.xml: labels for feedback settings added

	* res/xml/ck_settings.xml: feedback preferences added, default vibrations changed

2011-05-03 Gabor Simon <gabor.simon@mailbox.hu>
Long tap support added, two missing Vietnamese characters added, build process improved

	* build.xml: phony target 'align' added for invoking zipalign

	* res/xml/default_latin.xml: two missing Vietnamese characters added
